# CSC3002-group2-project

./: .gitignore  CMakeLists.txt  Coin.hpp  Game.cpp  Player.cpp  Player.h  README.md  StartMenu.cpp  TiledMap.h  build.ps1  csc3002 final report.docx  group2-project-proposal.docx  level1.tmj  main.cpp  run.ps1  实体文档.docx
assets/maps/: level1.tmj
assets/maps/Beginning/decorations/: coin.tsx
assets/maps/maps/: slime.tsx
src/: AudioManager.cpp  AudioManager.h  Camera.h  Coin.cpp  Coin.hpp  Game.cpp  Game.h  Player.cpp  Player.h  StartMenu.cpp  StartMenu.h  TiledMap.cpp  TiledMap.h  VideoPlayer.cpp  VideoPlayer.h  main.cpp
